# normalize-cli

./: .gitignore  README.md  pyproject.toml
normalize_cli/cli/: commands.py  outputs.py
normalize_cli/core/: connection.py  logger.py  models.py  run.py  utils.py
