[tool.poetry]
name = "normalize-cli"
version = "0.1.0"
description = "A cli utility that auto-generates intermediate dbt models that convert data that is replicated into the raw layer of a data warehouse in unnormalized JSON blob format into tabular format with the same data types present in the source system."
authors = ["cohenj20 <cohenj20@sacredheart.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
colorama = "^0.4.6"
click = "^8.1.7"
pandas = "^2.0.3"
pyodbc = "^5.1.0"
sqlalchemy = "2.0.28"
tqdm = "^4.66.4"

[tool.poetry.scripts]
normalize = 'normalize_cli.cli.commands:my_commands'

[tool.poetry.group.dev.dependencies]
commitizen = "^3.25.0"
mkdocs = "^1.5.3"
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.5.17"
pytest = "^8.1.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:^version"
]
